Add projection support
